--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.11.1",
     "fibers": "^5.0.0",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "sass": "^1.33.0",
     "sass-loader": "^10.1.1",
     "stylelint": "^13.13.1",
