--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "@prismicio/vue": "^2.0.11",
     "core-js": "^3.14.0",
     "nuxt": "^2.15.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.6",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/composition-api": "^0.29.3",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
