--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "@nuxtjs/prismic": "^1.3.1",
+    "@prismicio/client": "^5.1.0",
     "@prismicio/vue": "^2.0.11",
     "core-js": "^3.14.0",
-    "nuxt": "^2.15.6"
+    "nuxt": "^2.15.6",
+    "prismic-dom": "^2.2.6",
+    "prismic-javascript": "^3.0.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.6",
