--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.14.0",
     "nuxt": "^2.15.6",
     "prismic-dom": "^2.2.6",
-    "prismic-javascript": "^3.0.2"
+    "prismic-javascript": "^3.0.2",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.6",
